@@ -6,8 +6,6 @@ public final class TopicAccessException extends AccessException {
     }
 
     public static TopicAccessException forId(long id) {
-        return new TopicAccessException(
-                String.format("Non-topic owner with id '%d' is trying to archive the topic", id)
-        );
+        return new TopicAccessException("Non-topic owner with id '%d' is trying to archive the topic".formatted(id));
     }
 }
